tu fix giao dien

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=SCart
 APP_ENV=local
-APP_KEY=base64:OlVb5f9rZufO9vNEjO+mf8Jz311aa78yRhkqUyuNo2M=
+APP_KEY=base64:4rBPIGztED8yucnvp2LKTPI1jIm8yaktuQJfnBa8Ghw=
 APP_DEBUG=false
-APP_URL=http://127.0.0.1/s-cart/public
+APP_URL=http://localhost/s-cart/public
 
 LOG_CHANNEL=stack
 
@@ -39,7 +39,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 PAYPAL_CLIENT_ID=
 PAYPAL_SECRET=
 
-ADMIN_PREFIX=sc_admin
+ADMIN_PREFIX=demo_admin
 
 FILESYSTEM_DRIVER=public
 
@@ -57,7 +57,7 @@ QUEUE_DRIVER=database
 #Use send notice
 LOG_SLACK_WEBHOOK_URL=
 #Prefix for table database
-DB_PREFIX=sc_
+DB_PREFIX=demo_
 SC_API_LINK=https://api.s-cart.org/v2
 
 GITHUB_CLIENT_ID=
